# WellDataMapper_private

./: .replit  app.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--Load-production-data-df-pd-read-csv-output-file-csv-parse-dates-ProducingMonth-Def-1751358544542_1751358544543.txt  Pasted--Standardization-from-sklearn-preprocessing-import-StandardScaler-scaler-StandardScaler-c-1751355721874_1751355721875.txt  Pasted-import-pandas-as-pd-df-pd-read-csv-Wells-Production-for-modeling-882ff-2025-06-16-csv-df--1751354540272_1751354540274.txt
